# frontend-editables

./: .gitignore  CHANGELOG.rst  COPYING  README.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
src/frontend_editables/: __init__.py  _core.py  _redirector.py  _utils.py  transitional_cli.py
tests/: conftest.py  test_base.py  test_pth_file.py  test_redirector.py  test_symlinks.py  test_transitional_cli.py
