[build-system]
requires = ["flit-core >=3.2.0"]
build-backend = "flit_core.buildapi"

[project]
name = "frontend-editables"
version = "0.2.0"
description = "A library for installing distributions in editable mode."
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "COPYING" }
authors = [
  { name = "layday", email = "layday@protonmail.com" },
]
dependencies = [
  "typing-extensions >=3.10.0.0",
]

[project.optional-dependencies]
test = [
  "coverage[toml]",
  "pytest",
]

[project.urls]
homepage = "https://github.com/layday/frontend-editables"
# documentation = "readthedocs.org"
repository = "https://github.com/layday/frontend-editables"
changelog = "https://github.com/layday/frontend-editables/blob/main/CHANGELOG.rst"

[tool.flit.module]
name = "frontend_editables"


[tool.coverage.run]
source_pkgs = ["frontend_editables"]
omit = ["**/frontend_editables/_redirector.py"]
parallel = true
branch = true
dynamic_context = "test_function"

[tool.coverage.paths]
combine = ["src/frontend_editables", "**/frontend_editables"]


[tool.pyright]
include = ["src"]
strict = ["src"]


[tool.black]
line_length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
line_length = 99
